<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">أسـعـار الـيـوم</string>
    <string name="admob_app_id">ca-app-pub-1747848120826315~8853225061</string>
    <string name="ad_banner_unit_id">ca-app-pub-1747848120826315/1405022371</string>
    <string name="interstitial_ads">ca-app-pub-1747848120826315/3026183318</string>
    <string name="categories">الأقــســام</string>
    <string name="category_icon">Category Icon</string>
    <string name="products">المنتجات</string>
    <string name="product_details">مواصفات المنتج</string>
    <string name="from">من</string>
    <string name="egp">جنيه مصري</string>
    <string name="buy_from">اشتريه من</string>
    <string name="b">بـ</string>
    <string name="product_description">وصف المنتج</string>
    <string name="similar_product_text">منتجات مشابهة</string>
    <string name="drop_arrow">drop_arrow</string>
    <string name="price_changeable">التغير في السعر</string>
    <string name="amazon_first_line">تأكد من أن هذا مناسب عن طريق إدخال رقم الطراز الخاص بك.</string>
    <string name="update_product">تعديل المنتج</string>
    <string name="search_for">ما الذي تبحث عنه؟</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_details_btn">تفاصيل المنتج</string>
    <string name="home">الرئيسية</string>
    <string name="search">البحث</string>
    <string name="share_app">مشاركة التطبيق</string>
    <string name="app_url">
        تابع التغير في حركة أسعار المنتجات من الأبليكيشن ده \n
        https://play.google.com/store/apps/details?id=com.as3arelyoum</string>
    <string name="mobiles">موبايلات</string>
</resources>