<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        tools:layout="@layout/fragment_home"
        android:label="@string/home"
        android:name="com.as3arelyoum.ui.home.HomeFragment">
        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_homeFragment_to_categoriesFragment"
            app:destination="@id/categoryFragment" />
        <action
            android:id="@+id/action_homeFragment_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_productsFragment"
            app:destination="@id/productsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_searchFragment2"
            app:destination="@id/searchFragment" />
    </fragment>

    <fragment
        android:id="@+id/categoryFragment"
        android:label="@string/categories"
        android:name="com.as3arelyoum.ui.category.CategoriesFragment">
        <action
            android:id="@+id/action_categoriesFragment_to_productsFragment"
            app:destination="@id/productsFragment"
            app:enterAnim="@anim/fragment_enter"
            app:exitAnim="@anim/fragment_exit"
            app:popEnterAnim="@anim/fragment_enter_pop"
            app:popExitAnim="@anim/fragment_exit_pop" />
        <action
            android:id="@+id/action_categoriesFragment_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/productsFragment"
        android:name="com.as3arelyoum.ui.product.view.ProductsFragment">

        <action
            android:id="@+id/action_productsFragment_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment"/>

        <argument
            android:name="category"
            app:argType="com.as3arelyoum.data.remote.dto.CategoryDTO" />

    </fragment>
    <dialog
        android:id="@+id/productDetailsFragment"
        android:name="com.as3arelyoum.ui.product.view.ProductDetailsFragment"
        tools:layout="@layout/fragment_product_details" >
        <action
            android:id="@+id/action_productDetailsFragment_self"
            app:destination="@id/productDetailsFragment"
            app:enterAnim="@anim/fragment_enter"
            app:exitAnim="@anim/fragment_exit"
            app:popEnterAnim="@anim/fragment_enter_pop"
            app:popExitAnim="@anim/fragment_exit_pop"/>

        <argument
            android:name="productId"
            app:argType="integer" />
        <argument
            android:name="productPrice"
            app:argType="string" />
    </dialog>
    <fragment
        android:id="@+id/searchFragment"
        tools:layout="@layout/fragment_search"
        android:label="@string/search"
        android:name="com.as3arelyoum.ui.search.SearchFragment">
        <action
            android:id="@+id/action_searchFragment_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment" />
    </fragment>
</navigation>