<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/ll_product_details"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_toStartOf="@+id/close_product_details"
                android:fontFamily="sans-serif-black"
                android:gravity="right|center"
                android:text="@string/product_details"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

            <ImageButton
                android:id="@+id/close_product_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_4sdp"
                android:background="?android:selectableItemBackgroundBorderless"
                android:padding="@dimen/_6sdp"
                android:src="@drawable/ic_close"
                app:tint="@color/black" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ll_product_details"
            android:background="@color/background_bg"
            android:clipToPadding="false"
            android:paddingTop="@dimen/_4sdp"
            android:scrollbars="none"
            android:scrollingCache="true">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/product_source"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_margin="@dimen/_6sdp"
                            android:fontFamily="sans-serif-black"
                            android:padding="@dimen/_6sdp"
                            android:textColor="@color/source_color"
                            android:textSize="@dimen/_10ssp"
                            tools:text="من أمازون" />

                        <LinearLayout
                            android:id="@+id/product_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/product_image"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_110sdp"
                                android:layout_gravity="center"
                                android:contentDescription="@string/product_details"
                                android:padding="@dimen/_6sdp"
                                tools:src="@mipmap/ic_launcher_round" />

                            <TextView
                                android:id="@+id/name_tv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:layout_marginRight="@dimen/_10sdp"
                                android:padding="@dimen/_4sdp"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_11ssp"
                                tools:text="Product Name" />

                            <LinearLayout
                                android:id="@+id/debug_layout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:elevation="@dimen/_6sdp"
                                android:orientation="vertical">

                                <ImageButton
                                    android:id="@+id/debug_mode"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="right"
                                    android:layout_marginRight="@dimen/_6sdp"
                                    android:background="?android:selectableItemBackgroundBorderless"
                                    android:padding="@dimen/_6sdp"
                                    android:src="@drawable/ic_close"
                                    tools:ignore="ContentDescription" />

                                <LinearLayout
                                    android:id="@+id/spinner_layout"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:weightSum="2">

                                    <Spinner
                                        android:id="@+id/status_spinner"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="@dimen/_15sdp"
                                        android:layout_weight="1"
                                        android:background="@drawable/spinner"
                                        android:spinnerMode="dropdown" />

                                    <Spinner
                                        android:id="@+id/category_spinner"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="@dimen/_15sdp"
                                        android:layout_weight="1"
                                        android:background="@drawable/spinner"
                                        android:spinnerMode="dropdown" />

                                </LinearLayout>

                                <Button
                                    android:id="@+id/update_product_btn"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/_16sdp"
                                    android:layout_marginRight="@dimen/_16sdp"
                                    android:backgroundTint="#25313A"
                                    android:padding="@dimen/_10sdp"
                                    android:text="@string/update_product"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/_10ssp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                        </LinearLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/product_btn"
                            style="@style/Widget.Material3.Button.IconButton.Outlined"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/product_layout"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_15sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:padding="@dimen/_9sdp"
                            android:textColor="@color/green"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="bold"
                            app:icon="@drawable/ic_shopping"
                            app:iconGravity="end"
                            app:iconTint="#4CAF50"
                            app:rippleColor="#EFFFE9"
                            app:strokeColor="#4CAF50"
                            tools:text="إشتريه من أمازون بـ 7000.0 جنيه مصري" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/description_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cardView"
                    android:layout_marginTop="@dimen/_3sdp"
                    app:cardBackgroundColor="@color/white">

                    <RelativeLayout
                        android:id="@+id/description_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/_3sdp">

                        <ImageButton
                            android:id="@+id/bt_toggle_description"
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_above="@id/description_tv"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/drop_arrow"
                            android:rotation="180"
                            app:srcCompat="@drawable/ic_arrow_drop"
                            app:tint="@color/black" />

                        <TextView
                            android:id="@+id/description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:drawablePadding="@dimen/_6sdp"
                            android:padding="@dimen/_4sdp"
                            android:text="@string/product_description"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13ssp"
                            android:textStyle="bold"
                            app:drawableRightCompat="@drawable/ic_info"
                            app:drawableTint="@color/black" />

                        <TextView
                            android:id="@+id/description_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/description"
                            android:paddingStart="@dimen/_15sdp"
                            android:paddingEnd="@dimen/_15sdp"
                            android:paddingBottom="@dimen/_10sdp"
                            android:textColor="@color/black"
                            android:visibility="gone"
                            tools:text="@string/product_description"
                            tools:textSize="@dimen/_11ssp" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/graphCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/description_card"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    app:cardBackgroundColor="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_2sdp"
                            android:drawablePadding="@dimen/_6sdp"
                            android:paddingStart="@dimen/_8sdp"
                            android:paddingTop="@dimen/_14sdp"
                            android:paddingEnd="@dimen/_8sdp"
                            android:paddingBottom="@dimen/_14sdp"
                            android:text="@string/price_changeable"
                            android:textColor="@color/green"
                            android:textSize="@dimen/_13ssp"
                            android:textStyle="bold"
                            app:drawableRightCompat="@drawable/ic_price_change"
                            app:drawableTint="@color/green" />

                        <com.github.mikephil.charting.charts.LineChart
                            android:id="@+id/lineChart"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_250sdp"
                            android:layout_margin="@dimen/_4sdp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/similar_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/graphCard"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginBottom="@dimen/_40sdp"
                    app:cardBackgroundColor="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_2sdp"
                            android:drawablePadding="@dimen/_6sdp"
                            android:paddingStart="@dimen/_8sdp"
                            android:paddingTop="@dimen/_14sdp"
                            android:paddingEnd="@dimen/_8sdp"
                            android:paddingBottom="@dimen/_14sdp"
                            android:text="@string/similar_product_text"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13ssp"
                            android:textStyle="bold"
                            app:drawableRightCompat="@drawable/ic_shopping_cart" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_similar_products"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/background_bg"
                            tools:listitem="@layout/similar_product_card" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
